--- a/contrib/macdeploy/Base.lproj/InfoPlist.strings
+++ b/contrib/macdeploy/Base.lproj/InfoPlist.strings
@@ -1,1 +1,1 @@
-{	CFBundleDisplayName = "Reden Core"; CFBundleName = "Reden Core"; }
+{	CFBundleDisplayName = "Qbase Core"; CFBundleName = "Qbase Core"; }
